<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TextEditorActivity" >
    
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center"
	    android:orientation="horizontal" >
	    
        <Button 
            android:layout_weight="1"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:onClick="undoOperation"
		    android:text="@string/button_undo" />
		
		<Button 
		    android:layout_weight="1"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:onClick="redoOperation"
		    android:text="@string/button_redo" />
		
		<Button 
		    android:layout_weight="1"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:onClick="saveFile"
		    android:text="@string/button_save" />
		
		<Button 
		    android:layout_weight="1"
		    android:layout_width="0dp"
		    android:layout_height="wrap_content"
		    android:onClick="leaveSession"
		    android:text="@string/button_leave" />
		
	    
	</LinearLayout>
	
    <edu.umich.jgracik_zhuwei.eecs441.wewrite.EditTextCursor android:id="@+id/editor_obj"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="top|left"
        android:inputType="textMultiLine|textNoSuggestions"
        android:hint="@string/type_here" />

</LinearLayout>
